Fixes #29740 - Align puppet class names
(cherry picked from commit 40de750aac48b63fe747865cd9dfcb87f0f5b432)

--- a/app/assets/stylesheets/puppetclasses.scss
+++ b/app/assets/stylesheets/puppetclasses.scss
@@ -51,3 +51,8 @@
 #inherited-classes .panel-title {
   font-size: 1.6rem;
 }
+
+#puppet_klasses ul {
+  padding-left: 40px;
+  padding-right: 20px;
+}
